Fix Stream Page spacing in Mobile (#90)

--- a/platform-ui-skin/src/main/webapp/skin/less/social/skin/StreamPage/Style.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/social/skin/StreamPage/Style.less
@@ -94,7 +94,7 @@
 
 @media (max-width: @maxTabletWidth) {
   #StreamPage {
-    padding: 20px;
+    padding: 20px 0 !important;
   }
 }
 
